--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -348,3 +348,17 @@ ul {
 li {
     list-style: none;
 }
+
+.clearfix:after {
+    content: "";
+    display: table-cell;
+    clear: both;
+}
+.clearfix {
+    clear: both;
+    zoom: 1;
+}
+.clearfix {
+    overflow: auto;
+    _height: 1%;
+}
